syntax = "proto3";
package models;
option go_package = "./models";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";

message Log {
  option (gorm.opts) = {ormable: true};

  string type = 1;
  uint64 log_index = 2 [(gorm.field).tag = {index: "idx_log_index"}];
  string transaction_hash = 3 [(gorm.field).tag = {index: "idx_transaction_hash"}];
  uint32 transaction_index = 4;
  string address = 5 [(gorm.field).tag = {index: "idx_address"}];
  string data = 6;
  string indexed = 7;
  uint64 block_number = 8 [(gorm.field).tag = {index: "idx_block_number"}];
  uint64 block_timestamp = 9;
  string block_hash = 10;
  string item_id = 11;
  string item_timestamp = 12;
  string method = 13;

  // Postgres primary key
  uint64 id = 14;
}
