syntax = "proto3";
package models;
option go_package = "./models";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";

message LogCount {
  option (gorm.opts) = {ormable: true};

  string transaction_hash = 1 [(gorm.field).tag = {index: "log_count_idx_transaction_hash"}];
  uint64 log_index = 2 [(gorm.field).tag = {index: "log_count_idx_log_index"}];
  uint64 count = 3 [(gorm.field).tag = {index: "log_count_idx_count"}];

  // Postgres primary key
  uint64 id = 4;
}
